Translate and Format

--- a/i18n/zh-tw/docusaurus-plugin-content-docs/current.json
+++ b/i18n/zh-tw/docusaurus-plugin-content-docs/current.json
@@ -1,6 +1,6 @@
 {
   "version.label": {
-    "message": "當前版本",
+    "message": "2; 當前版本",
     "description": "The label for version current"
   },
   "sidebar.docs.category.Features": {
