--- a/i18n/zh-tw/docusaurus-plugin-content-docs/current/developer/i18n.md
+++ b/i18n/zh-tw/docusaurus-plugin-content-docs/current/developer/i18n.md
@@ -1,36 +1,36 @@
 ---
 sidebar_position: 7
-title: 本地化
+title: 翻譯
 ---
-## 翻译文本
-所有的翻译文本均在 locale 文件夹下，以 `<lang>.json` 形式命名，`<lang>` 应该为某个具体的语言编号，如 en、zh-cn 等，具体编辑器中支持的语言见编辑器对应的翻译文档。
-## 数据格式
-对于具体的 JSON 文件，应当满足如下格式：
+## 翻譯文字
+所有的翻譯文字均在 locale 資料夾下，以 `<lang>.json` 形式命名，`<lang>` 應該為某個具體的語言編號，如 en、zh-tw 。具體編輯器中支援的語言請見編輯器對應的翻譯文件。
+## 數據格式
+對於具體的 JSON 檔案，應當滿足如下格式：
 ```json
 {
     "message.id.1": "this is message 1",
     "message.id.2": "this is message 2"
 }
 ```
-在上述格式中，JSON 文件必须有一个仅有键值对构成的对象，其中键必须是满足 ``[a-zA-Z0-9-.]`` 的合法字符串，即为翻译 ID，值必须是字符串类型，即为对应的翻译内容。
-## 冲突处理
-多个扩展可能会对同一个翻译 ID 提供翻译，此时后加载的扩展应当覆盖先前载入的翻译。特别地，规定编辑器主体的翻译必须是最先加载的。
+在上述格式中，JSON 檔案必須有一個僅有鍵值對構成的對象，其中鍵必須是滿足 ``[a-zA-Z0-9-.]`` 的合法字串，即為翻譯 ID，值必須是字串型別，即為對應的翻譯內容。
+## 衝突處理
+多個擴充套件可能會對同一個翻譯 ID 提供翻譯，此時後載入的擴充套件會覆蓋先前載入的翻譯。除了編輯器主體，它的翻譯必須是最先載入的。
 
-例如扩展 A 翻译文件 `en.json` 如下：
+例如擴充套件 A 翻譯檔案 `en.json` 如下：
 ```json
 {
     "message.say": "Hello!",
     "message.world": "World!"
 }
 ```
-扩展 B 翻译文件 `en.json` 如下：
+擴充套件 B 翻譯檔案 `en.json` 如下：
 ```json
 {
     "message.say": "How are you?",
     "message.hi": "Hi!"
 }
 ```
-假如先加载扩展 A，后加载扩展 B，那么最终加载到编辑器中的翻译相当于如下内容，可以看到 ``message.say`` 的内容被覆盖了：
+假如先載入擴充套件 A，後加載擴充套件 B，那麼最終載入到編輯器中的翻譯相當於如下內容，可以看到 ``message.say`` 的內容被覆蓋了：
 ```json
 {
     "message.say": "How are you?",
