--- a/i18n/zh-tw/docusaurus-theme-classic/footer.json
+++ b/i18n/zh-tw/docusaurus-theme-classic/footer.json
@@ -1,10 +1,10 @@
 {
   "link.title.Docs": {
-    "message": "文檔",
+    "message": "文档",
     "description": "The title of the footer links column with title=Docs in the footer"
   },
   "link.title.Links": {
-    "message": "連結",
+    "message": "链接",
     "description": "The title of the footer links column with title=Links in the footer"
   },
   "link.title.More": {
@@ -16,11 +16,11 @@
     "description": "The label of footer link with label=Features linking to /features/custom-fps"
   },
   "link.item.label.For developers": {
-    "message": "開發者",
+    "message": "开发者",
     "description": "The label of footer link with label=For developers linking to /developer/at-first"
   },
   "link.item.label.Clip Community": {
-    "message": "別針社群",
+    "message": "别针社区",
     "description": "The label of footer link with label=Clip Community linking to https://codingclip.com/"
   },
   "link.item.label.QQ": {
